@@ -31,6 +31,8 @@
   *   - Fixed Benito project discarding incoming data from the USB virtual serial port when the USART is busy
   *   - Fixed broken DFU bootloader, added XPLAIN support for bootloader start when XCK jumpered to ground
   *   - Fixed broken HID_REQ_GetReport request handler in the Low Level GenericHID demo
+  *   - Fixed possible lost data in the XPLAINBridge, USBtoSerial and Benito projects when the host exceeds the packet
+  *     timeout period on received packets as set by USB_STREAM_TIMEOUT_MS (thanks to Justin Rajewski)
   *
   *  \section Sec_ChangeLog101122 Version 101122
   *  <b>New:</b>
